mobile: fix header decorations
The section padding changes make the decorations invisible (or worse,
only partially visible) on smaller screen widths. Instead, place them on
top.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -223,6 +223,14 @@ nav a:hover {
   section {
     padding: 0em 1em;
   }
+
+  @each $h in [h1, h2, h3, h4, h5, h6] {
+    section #{$h}::before {
+      left: 0em;
+      top: -1em;
+    }
+  }
+
 }
 
 .tags {
